--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
   "devDependencies": {
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@types/react": "^19.1.1",
-    "@types/react-native": "^0.72.8",
+    "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-native": "^5.0.0",
-    "prettier": "2.8.8",
+    "prettier": "^3.6.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "typescript": "^5.8.3"
