Update CI workflows and add package-lock.json
Expanded branch patterns in pr-checks.yml to include 'inital-developement' and all branches. Changed publish.yml to trigger on 'Development' branch instead of 'main'. Added package-lock.json to track exact dependency versions.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -4,8 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - main
-      - develop
+      - Development
 
 jobs:
   lint-and-typecheck:
