--- a/example/BareCli/package.json
+++ b/example/BareCli/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bhojaniasgar/react-native-otp-input": "link:../..",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.4",
