Remove setHash API and update hash handling for OTP
Eliminates the setHash API and all related code, enforcing that the app hash for SMS Retriever API is always computed from the app's package name and signing certificate. Updates documentation and usage examples to clarify that the hash cannot be set or overridden, and must be used exactly as returned by getHash().

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["react-native"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "lib", "example", "**/*.test.ts", "**/*.test.tsx"]
