--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhojaniasgar/react-native-otp-input",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.0",
   "description": "A fully customizable, responsive OTP input component for React Native with autofill support",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -20,7 +20,11 @@
     "lint": "eslint src --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "clean": "rm -rf lib"
+    "clean": "rm -rf lib",
+    "version:beta": "npm version prerelease --preid=beta",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "keywords": [
     "react-native",
