--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhojaniasgar/react-native-otp-input",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A fully customizable, responsive OTP input component for React Native with autofill support",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -8,10 +8,18 @@
   "files": [
     "lib",
     "src",
-    "android",
+    "android/src",
+    "android/build.gradle",
+    "android/gradle.properties",
+    "android/proguard-rules.pro",
+    "android/gradle",
+    "android/gradlew",
+    "android/gradlew.bat",
     "react-native.config.js",
+    "react-native-otp-input.podspec",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "index.d.ts"
   ],
   "scripts": {
     "build": "tsc",
