feat: Make SMS permissions opt-in (v1.4.0-beta.0)
- SMS permissions are now opt-in by default
- Users must set OtpVerify_enableSmsFeatures=true to enable SMS features
- Cleaner app permissions for users not using SMS auto-read
- Added SMS_SETUP.md guide for enabling SMS features
- Split Android manifests: main (no permissions) + sms (with permissions)
- Updated README with opt-in instructions

BREAKING CHANGE: SMS permissions no longer included by default.
Users using SMS Retriever API features must add OtpVerify_enableSmsFeatures=true to their android/build.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,19 @@ android {
 
     }
 
+    // Check if SMS features are enabled (opt-in)
+    def enableSmsFeatures = safeExtGet('OtpVerify_enableSmsFeatures', false)
+    
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            if (enableSmsFeatures) {
+                // Include SMS manifest only if enabled
+                manifest.srcFile 'src/sms/AndroidManifest.xml'
+            }
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
