--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhojaniasgar/react-native-otp-input",
-  "version": "1.4.0-beta.0",
+  "version": "1.3.2",
   "description": "A fully customizable, responsive OTP input component for React Native with autofill support",
   "main": "lib/index.js",
   "module": "lib/index.js",
