feat: Make SMS permissions opt-in (v1.3.2) (#11)
* feat: Make SMS permissions opt-in (v1.4.0-beta.0)

- SMS permissions are now opt-in by default
- Users must set OtpVerify_enableSmsFeatures=true to enable SMS features
- Cleaner app permissions for users not using SMS auto-read
- Added SMS_SETUP.md guide for enabling SMS features
- Split Android manifests: main (no permissions) + sms (with permissions)
- Updated README with opt-in instructions

BREAKING CHANGE: SMS permissions no longer included by default.
Users using SMS Retriever API features must add OtpVerify_enableSmsFeatures=true to their android/build.gradle

* chore: bump version to 1.3.2 for stable release

* chore: bump version to 1.3.2 for stable release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhojaniasgar/react-native-otp-input",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A fully customizable, responsive OTP input component for React Native with autofill support",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -8,7 +8,8 @@
   "files": [
     "lib",
     "src",
-    "android/src",
+    "android/src/main",
+    "android/src/sms",
     "android/build.gradle",
     "android/gradle.properties",
     "android/proguard-rules.pro",
@@ -18,6 +19,7 @@
     "react-native.config.js",
     "react-native-otp-input.podspec",
     "README.md",
+    "SMS_SETUP.md",
     "LICENSE",
     "index.d.ts"
   ],
